Fixed so it scrolls when overflow

--- a/frontend/altinn-support-dashboard.client/src/components/Notification/styles/NotificationList.module.css
+++ b/frontend/altinn-support-dashboard.client/src/components/Notification/styles/NotificationList.module.css
@@ -29,3 +29,8 @@
 .searchField :focus {
     outline: none;
 }
+
+.card{
+    height: 100%;
+    overflow-y: auto;
+}
